<resources>
    <string name="app_name">eTrade</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etrade">eTrade</string>
    <string name="log_in">Log In</string>
    <string name="signin">SignIn</string>
    <string name="log_in_with_google_account">Log In with Google Account</string>
    <string name="sign_in_with_google_account">SignIn with Google Account</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="discount_available">Not Available</string>
    <string name="v_1_0_0">V 1.0.0</string>
    <string name="copy_right">@ eTrade 2023</string>
    <string name="web_client_id">294562834700-s3fhu3fs1k18sch5duk89ov1l6fleokj.apps.googleusercontent.com</string>
</resources>